--- a/taskManager/package.json
+++ b/taskManager/package.json
@@ -25,9 +25,11 @@
     "react-chartjs-2": "5.2.0",
     "react-dom": "18.2.0",
     "react-github-btn": "1.4.0",
+    "react-hook-form": "^7.53.0",
     "react-router-dom": "6.11.0",
     "react-scripts": "^5.0.1",
     "react-table": "7.8.0",
+    "recharts": "^2.12.7",
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "2.1.1",
     "yup": "1.1.1"
