--- a/taskManager/package.json
+++ b/taskManager/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-github-btn": "1.4.0",
     "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "6.11.0",
     "react-scripts": "^5.0.1",
     "react-table": "7.8.0",
@@ -68,8 +69,7 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "prettier": "2.8.8"
+    "eslint-plugin-react-hooks": "4.6.0"
   },
   "overrides": {
     "svgo": "3.0.2"
