--- a/taskManager/.eslintrc.json
+++ b/taskManager/.eslintrc.json
@@ -4,7 +4,7 @@
     "es2021": true
   },
   "extends": [
-    "plugin:react/recommended",
+    "react-app", // Use react-app to avoid conflicts
     "prettier"
   ],
   "parserOptions": {
@@ -26,10 +26,7 @@
     "react/jsx-filename-extension": [
       1,
       {
-        "extensions": [
-          ".js",
-          ".jsx"
-        ]
+        "extensions": [".js", ".jsx"]
       }
     ],
     "react/jsx-props-no-spreading": [
@@ -46,9 +43,7 @@
   "settings": {
     "import/resolver": {
       "node": {
-        "paths": [
-          "src"
-        ]
+        "paths": ["src"]
       }
     }
   }
