--- a/taskManager/package.json
+++ b/taskManager/package.json
@@ -21,6 +21,8 @@
     "axios": "^1.7.7",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
+    "cors": "^2.8.5",
+    "eslint-config-react-app": "^7.0.1",
     "mdb-react-ui-kit": "^9.0.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
@@ -64,12 +66,12 @@
   },
   "devDependencies": {
     "ajv": "^7.2.4",
-    "eslint": "8.39.0",
+    "eslint": "^9.11.1",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "4.6.0"
   },
   "overrides": {
